--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "description":"Base Node Proejct webserver with openid",
   "version":"0.0.1",
   "dependencies": {
-    "express":"3.x"
+    "express":"3.x",
+    "hbs":"*",
+    "passport":"*",
+    "passport-openid:"*",
+    "passport-google":"*"
 
   }
 }
