--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "version":"0.0.1",
   "dependencies": {
     "express":"3.x",
+    "connect-multipart":"*",
     "hbs":"*",
     "passport":"*",
     "passport-openid:"*",
-    "passport-google":"*"
+    "passport-google":"*",
+    "pg":"*"
 
   }
 }
